opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/topology"
dev-repo: "git+https://github.com/coq-community/topology.git"
bug-reports: "https://github.com/coq-community/topology/issues"
license: "LGPL-2.1-or-later"

synopsis: "General topology in Coq"
description: """
This library develops some of the basic concepts
and results of general topology in Coq.
"""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "coq" {(>= "8.16" & < "8.19~") | (= "dev")}
  "dune" {>= "2.5"}
  "coq-zorns-lemma" {= version}
]

tags: [
  "category:Mathematics/Real Calculus and Topology"
  "keyword:topology"
  "keyword:filters"
  "keyword:nets"
  "keyword:metric spaces"
  "keyword:real analysis"
  "keyword:Urysohn's lemma"
  "keyword:Tietze extension theorem"
  "logpath:Topology"
]
authors: [
  "Daniel Schepler"
]
